[workspace]
resolver = "2"
members = ["cli", "clients/rust", "parser", "program", "store"]

[workspace.package]
version = "0.6.0"

[workspace.dependencies]
anyhow = "1.0.97"
anchor-lang = "0.32.1"
arc-swap = "1.6.0"
assert_matches = "1.5.0"
async-trait = "0.1.88"
borsh = "1.0.0"
bs58 = "0.5.1"
bytemuck = "1.0.0"
clap = "4.5.32"
clap_derive = "4.5.32"
env_logger = "0.11.3"
hashbrown = "0.16.0"
log = "0.4.21"
num-derive = "0.4.2"
num-traits = "0.2.0"
parking_lot = "0.12.0"
pinocchio = "0.8.2"
pinocchio-system = "0.2.0"
pinocchio-pubkey = "0.2.0"
serde = "1.0.0"
serde_json = "1.0.117"
serde_with = "3.0.0"
shank = "0.4.5"
# Solana SDK (decoupled from Agave)
# See: https://github.com/anza-xyz/solana-sdk
solana-pubkey = "3.0.0"
solana-transaction = { version = "3.0.0", features = ["bincode"] }
solana-instruction = "3.0.0"
solana-commitment-config = "3.0.0"
solana-keypair = "3.0.0"
solana-message = "3.0.0"
solana-msg = "3.0.0"
solana-signer = "3.0.0"
solana-rent = "3.0.0"
solana-program = "3.0.0"
solana-program-entrypoint = "3.0.0"
solana-account-info = "3.0.0"
solana-program-error = "3.0.0"
solana-hash = "3.0.0"
solana-decode-error = "2.3.0"
solana-system-interface = "2.0.0"
solana-cpi = "3.0.0"
# Agave Crates
solana-cli-config = "3.0.0"
solana-client = "3.0.0"
solana-account-decoder-client-types = "3.0.0"
solana-program-test = "3.0.0"
# End
spl-associated-token-account = "8.0.0"
spl-pod = "0.7.1"
spl-token = { version = "9.0.0" }
spl-token-group-interface = "0.7.1"
spl-token-metadata-interface = "0.8.0"
spl-token-2022-interface = "2.1.0"
thiserror = "2.0.17"
tokio = "1.48.0"
toml = "0.9.8"
futures = "0.3.31"
yellowstone-shield = { path = "program" }
yellowstone-shield-cli = { path = "cli", version = "0.8.0" }
yellowstone-shield-client = { path = "clients/rust", version = "0.8.0" }
yellowstone-shield-parser = { path = "parser", version = "0.9.0" }
yellowstone-grpc-client = "10.1.1"
yellowstone-grpc-proto = "10.1.1"

[workspace.metadata.toolchains]
format = "1.86"
lint = "1.86"

[workspace.metadata.cli]
solana = "v3.0.6"
