[workspace]
resolver = "2"
members = ["cli", "clients/rust", "parser", "program", "store"]

[workspace.package]
version = "0.7.0"
# Minimum rustc to build the published crates. rust-toolchain.toml is newer
# because dev-only dependencies (solana-program-test v4) need rustc 1.92+.
rust-version = "1.89.0"

[workspace.dependencies]
anchor-lang = "0.32.1"
anyhow = "1.0.97"
arc-swap = "1.6.0"
async-trait = "0.1.88"
borsh = "1.0.0"
bs58 = "0.5.1"
bytemuck = "1.0.0"
clap = "4.5.32"
clap_derive = "4.5.32"
env_logger = "0.11.3"
futures = "0.3.31"
hashbrown = "0.16.0"
humantime-serde = "1.1.1"
log = "0.4.21"
num-derive = "0.4.2"
num-traits = "0.2.0"
parking_lot = "0.12.0"
pinocchio = "0.8.2"
pinocchio-pubkey = "0.2.0"
pinocchio-system = "0.2.0"
serde = "1.0.0"
serde_json = "1.0.117"
serde_with = "3.0.0"
shank = "0.4.5"
thiserror = "2.0.17"
tokio = "1.48.0"
toml = "0.9.8"

# Agave Monorepo
solana-account-decoder-client-types = "4.0.0"
solana-cli-config = "4.0.0"
solana-client = "4.0.0"
solana-program-test = { version = "4.0.0", features = ["agave-unstable-api"] }

# Solana SDK
# Versions must stay within the ranges accepted by the Agave v4 crates above.
# See: https://github.com/anza-xyz/solana-sdk
solana-account = "4.0.0"
solana-account-info = "3.0.0"
solana-commitment-config = "3.0.0"
solana-cpi = "3.1.0"
solana-hash = "4.2.0"
solana-instruction = "3.3.0"
solana-keypair = "3.1.0"
solana-program = "4.0.0"
solana-program-error = "3.0.1"
solana-pubkey = "4.1.0"
solana-rent = "3.0.0"
solana-signer = "3.0.0"
solana-system-interface = "3.1.0"
solana-transaction = { version = "4.0.0" }

# SPL
spl-associated-token-account = "8.0.0"
spl-pod = "0.7.1"
spl-token = "9.0.0"
spl-token-2022-interface = "2.1.0"
spl-token-group-interface = "0.7.1"
spl-token-metadata-interface = "0.8.0"

# Yellowstone
yellowstone-grpc-client = "13.1.0"
yellowstone-grpc-proto = "12.4.0"
yellowstone-shield-cli = { path = "cli", version = "0.10.0" }
yellowstone-shield-client = { path = "clients/rust", version = "0.10.0" }
yellowstone-shield-parser = { path = "parser", version = "0.11.0" }

[workspace.metadata.toolchains]
format = "1.93.1"
lint = "1.93.1"

[workspace.metadata.cli]
solana = "v4.0.2"
