[package]
name = "yellowstone-shield-cli"
version = "0.9.0"
edition = "2021"
rust-version.workspace = true
description = "Yellowstone Shield CLI"
repository = "https://github.com/rpcpool/yellowstone-shield"
readme = "README.md"
license = "Apache-2.0"
publish = true

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
borsh = { workspace = true }
bs58 = { workspace = true }
clap = { workspace = true }
clap_derive = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
yellowstone-shield-client = { workspace = true, features = [
  "token-extensions",
] }
# Agave Monorepo
solana-cli-config = { workspace = true }
solana-client = { workspace = true }
# Solana SDK
solana-commitment-config = { workspace = true }
solana-instruction = { workspace = true }
solana-keypair = { workspace = true }
solana-pubkey = { workspace = true }
solana-signer = { workspace = true }
# SPL
spl-associated-token-account = { workspace = true, features = [
  "no-entrypoint",
] }
spl-pod = { workspace = true }
spl-token-2022-interface = { workspace = true }
spl-token-metadata-interface = { workspace = true }
