[package]
name = "yellowstone-shield-parser"
version = "0.7.0"
edition = "2021"
description = "Parser for the Yellowstone Shield program"
repository = "https://github.com/rpcpool/yellowstone-shield"
license = "Apache-2.0"
readme = "./../README.md"
publish = true

[dependencies]
yellowstone-shield-client = { workspace = true }
borsh = { workspace = true }
solana-program = { workspace = true }
