[package]
name = "yellowstone-shield-parser"
version = "0.11.0"
edition = "2021"
rust-version.workspace = true
description = "Parser for the Yellowstone Shield program"
repository = "https://github.com/rpcpool/yellowstone-shield"
license = "Apache-2.0"
readme = "./../README.md"
publish = true

[dependencies]
borsh = { workspace = true }
solana-pubkey = { workspace = true }
yellowstone-shield-client = { workspace = true }
