[package]
name = "yellowstone-shield-store"
version = "0.8.0"
edition = "2021"
readme = "README.md"
description = "Policy store for the Yellowstone Shield program"
repository = "https://github.com/rpcpool/yellowstone-shield"
license = "Apache-2.0"

[dependencies]
arc-swap = { workspace = true }
hashbrown = { workspace = true }
parking_lot = { workspace = true }
solana-client = { workspace = true }
solana-pubkey = { workspace = true }
solana-commitment-config = { workspace = true }
log = { workspace = true }
tokio = { workspace = true, features = ["full"] }
thiserror = { workspace = true }
anyhow = { workspace = true }
borsh = { workspace = true, features = ["derive"] }
yellowstone-grpc-client = { workspace = true }
yellowstone-grpc-proto = { workspace = true }
yellowstone-shield-parser = { workspace = true, features = [] }
serde = { workspace = true, features = ["derive"] }
humantime-serde = "1.1"
solana-account-decoder-client-types = { workspace = true }
futures = { workspace = true }

[dev-dependencies]
toml = { workspace = true }
clap = { workspace = true, features = ["derive"] }
clap_derive = { workspace = true }
yellowstone-shield-cli = { workspace = true }
yellowstone-shield-client = { workspace = true }
env_logger = { workspace = true }
solana-cli-config = { workspace = true }
solana-pubkey = { workspace = true }
