[package]
name = "yellowstone-shield-client"
version = "0.10.0"
description = "A generated Rust library for the Blocklist program"
repository = "https://github.com/rpcpool/yellowstone-shield"
edition = "2021"
rust-version.workspace = true
readme = "README.md"
license = "Apache-2.0"
publish = true

[features]
test-sbf = []
fetch = ["dep:solana-client", "dep:solana-account"]
anchor-idl-build = ["anchor"]
anchor = ["dep:anchor-lang"]
serde = ["dep:serde", "dep:serde_with"]
token-extensions = [
  "dep:spl-associated-token-account",
  "dep:spl-token-2022-interface",
  "dep:spl-token-metadata-interface",
  "dep:spl-pod",
]

[dependencies]
anchor-lang = { workspace = true, optional = true }
borsh = { workspace = true, features = ["derive"] }
num-derive = { workspace = true }
num-traits = { workspace = true }
serde = { workspace = true, features = ["derive"], optional = true }
serde_with = { workspace = true, optional = true }
thiserror = { workspace = true }
# Agave Monorepo
solana-client = { workspace = true, optional = true }
# Solana SDK
solana-account = { workspace = true, optional = true }
solana-account-info = { workspace = true }
solana-cpi = { workspace = true }
solana-hash = { workspace = true, features = ["copy"] }
solana-instruction = { workspace = true }
solana-keypair = { workspace = true }
solana-program-error = { workspace = true }
solana-pubkey = { workspace = true, features = ["curve25519", "borsh"] }
solana-rent = { workspace = true }
solana-signer = { workspace = true }
solana-system-interface = { workspace = true, features = ["bincode"] }
solana-transaction = { workspace = true, features = ["wincode"] }
# SPL
spl-associated-token-account = { workspace = true, features = [
  "no-entrypoint",
], optional = true }
spl-pod = { workspace = true, optional = true }
spl-token-2022-interface = { workspace = true, optional = true }
spl-token-metadata-interface = { workspace = true, optional = true }

[dev-dependencies]
solana-program-test = { workspace = true }

[dev-dependencies.yellowstone-shield-client]
path = "."
features = ["token-extensions"]
